# enterprise-rag-service

./: .env.example  .gitignore  Dockerfile  README.md  app.py  cli.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: constants.py  settings.py
scripts/: start-prod.sh
src/api/: rebuild_routes.py  routes.py  upload_routes.py
src/chains/: rag_chain.py
src/context/: context_builder.py
src/core/: container.py  dependencies.py
src/embeddings/: embedding_service.py
src/llm/: groq_service.py
src/loaders/: document_loader.py
src/models/: response.py
src/prompts/: prompt_template.py
src/retrieval/: retriever.py
src/services/: chat_service.py  ingestion_service.py  upload_service.py
src/splitter/: text_splitter.py
src/utils/: upload_index.py
src/vectordb/: chroma_service.py
